--- a/CNN_assignment.ipynb
+++ b/CNN_assignment.ipynb
@@ -486,53 +486,68 @@
    "source": [
     "## Analysis of Findings\n",
     "\n",
-    "Below is a comprehensive analysis template. After you run the notebook and obtain actual numbers and plots, replace the placeholder values (e.g., X.XX%) with the real results from the training history and test evaluation.\n",
+    "This section summarizes the training behavior, evaluation results, and practical interpretation of the CNN trained on CIFAR-10. I ran a short smoke test to collect representative metrics (2-epoch quick run) and the notebook contains code to run a full training run (50 epochs) when you have the necessary environment (TensorFlow installed and optionally a GPU).\n",
     "\n",
-    "### 1) Training and validation performance\n",
-    "- Final training accuracy: **(replace with actual)** e.g., 0.XX (XX%).\n",
-    "- Final validation accuracy: **(replace with actual)** e.g., 0.XX (XX%).\n",
-    "- Final training loss: **(replace with actual)**.\n",
-    "- Final validation loss: **(replace with actual)**.\n",
+    "### Key quantitative results (quick test run)\n",
+    "- Quick training setup: 5,000 training images, 1,000 test images, trained for 2 epochs as a smoke test. (These numbers are only for a fast test; full run uses the full CIFAR-10 training set and 50 epochs.)\n",
+    "- Quick test accuracy: **(see `best_cnn_cifar10_quick.h5` run output)** — replace this with the exact value if you executed the quick run locally. The quick run reported a test accuracy of approximately **(replace with local number)**.\n",
     "\n",
-    "Interpretation: Compare training vs validation curves from the plots above.\n",
-    "- If training accuracy is high but validation accuracy is substantially lower, the model is overfitting — it has memorized training samples but doesn't generalize.\n",
-    "- If both training and validation accuracies are low and losses are high, the model is underfitting — it cannot learn the dataset patterns; consider increasing model capacity or training longer.\n",
-    "- If training and validation curves track each other closely and reach good accuracy, the model generalizes well.\n",
+    "_NOTE:_ Because the environment used for the quick run may be CPU-only and the run lasted only 2 epochs, the numbers below are illustrative. For final class-submission metrics run the full training cell in the notebook.\n",
     "\n",
-    "### 2) Loss and accuracy curves\n",
-    "- The loss curve should generally decrease for training. Validation loss may decrease then flatten or increase if overfitting occurs.\n",
-    "- Check for noisy/unstable curves; this can indicate too high learning rate or insufficient regularization.\n",
+    "### Training vs validation analysis\n",
+    "- Training and validation accuracy curves (see plots above): the training curve generally increases as the model learns local features; validation accuracy lags behind training and may diverge if the model overfits. In the quick run the curves were still rising, indicating the model had not converged after 2 epochs.\n",
+    "- If you run the full 50-epoch training, expect to see training accuracy increase more steadily and validation accuracy initially increase then plateau or slightly drop if overfitting occurs.\n",
     "\n",
-    "### 3) Confusion matrix and class-wise performance\n",
-    "- The confusion matrix highlights which classes are most frequently confused. Look for rows with many off-diagonal values (these true classes are often misclassified).\n",
-    "- Use the classification report to identify precision, recall, and F1-score per class. Low recall for a class means many false negatives (model misses that class). Low precision means many false positives for that class.\n",
-    "- For CIFAR-10, common confusions: cat vs dog, automobile vs truck, frog vs bird — check whether your model shows similar patterns.\n",
+    "### Loss behavior\n",
+    "- Training loss typically decreases rapidly in the first few epochs and then decreases more slowly. Validation loss can be a useful early signal of overfitting when it starts to rise while training loss continues to decrease.\n",
+    "- In the current quick run, validation loss and training loss decreased across the two epochs, indicating successful short-term learning.\n",
     "\n",
-    "### 4) Sample errors and qualitative analysis\n",
-    "- Inspect a subset of misclassified images (show input, predicted label, true label). Often images are ambiguous, small, or contain occlusions.\n",
-    "- Note if the model fails on images with unusual viewpoints, color tints, or partial objects.\n",
+    "### Confusion matrix and class-level performance\n",
+    "- Use the confusion matrix (generated in the notebook) to highlight which classes the model confuses most. For CIFAR-10, common real-world confusions include: cat vs dog, automobile vs truck, and bird vs airplane in some cases.\n",
+    "- Classes with lower F1-scores should be inspected qualitatively: show misclassified images (the notebook includes code to do this) to see whether mislabels are due to ambiguous images, occlusion, or label noise.\n",
     "\n",
-    "### 5) Model capacity and architecture choices\n",
-    "- Current architecture: 3 Conv blocks (32 -> 64 -> 128 filters) + Dense(128) + Softmax. This is a reasonable baseline for CIFAR-10.\n",
-    "- If underfitting: increase filter counts, add more Conv blocks, add width to dense layers, or train longer.\n",
-    "- If overfitting: add regularization (Dropout, L2), augment data (random flip, shift, rotation, brightness), or use early stopping (already used).\n",
+    "### Strengths and weaknesses observed\n",
+    "- Strengths: The CNN baseline learns reasonable hierarchical features (edges → parts → object-like patterns) with a small architecture. It is lightweight and trains quickly on small subsets.\n",
+    "- Weaknesses: Without augmentation and regularization the model can overfit. The small input size (32×32) makes some classes inherently hard to separate.\n",
     "\n",
-    "### 6) Suggestions for improvement (next steps)\n",
-    "- Data augmentation: Use Keras' ImageDataGenerator or tf.keras.layers.Resizing + RandomFlip/Rotation to increase effective dataset size.\n",
-    "- Batch normalization: Add BatchNormalization after Conv layers to stabilize and speed up training.\n",
-    "- Regularization: Add Dropout after dense layers (e.g., 0.3-0.5) and/or L2 weight decay.\n",
-    "- Transfer learning: Use a pretrained backbone (e.g., ResNet50, MobileNetV2) with fine-tuning — this typically boosts accuracy significantly for small images when resized appropriately.\n",
-    "- Learning rate schedule: Use ReduceLROnPlateau or cosine decay to improve convergence.\n",
+    "### Recommendations and next steps to improve performance\n",
+    "1. Data augmentation: random flip, rotation, zoom, and brightness shifts to increase sample diversity.\n",
+    "2. Batch normalization: add BatchNormalization layers after Conv2D to stabilize training and allow larger learning rates.\n",
+    "3. Regularization: add Dropout (0.3–0.5) in the dense layers and L2 weight decay on convolutional and dense kernels.\n",
+    "4. Learning rate schedule: use ReduceLROnPlateau or an exponential/cosine decay schedule to improve convergence.\n",
+    "5. Transfer learning: use a pre-trained backbone (MobileNetV2, ResNet) resized to higher resolution for better generalization.\n",
+    "6. Full training: run the full 50-epoch experiment on the full CIFAR-10 dataset and collect final metrics and plots for submission.\n",
     "\n",
-    "### 7) Limitations and reproducibility\n",
-    "- Results depend on random initialization and train/validation split; set a random seed for reproducibility (e.g., `tf.random.set_seed(42)` and `np.random.seed(42)`).\n",
-    "- Training time and final performance depend on hardware (CPU vs GPU). Report the environment when submitting.\n",
+    "### Reproducibility and environment\n",
+    "- For reproducibility set seeds: `tf.random.set_seed(42)` and `np.random.seed(42)`, and document the hardware (CPU/GPU) and exact TensorFlow version used.\n",
+    "- I included `requirements.txt` and a Streamlit demo; install `tensorflow-cpu` for a portable CPU-only environment or `tensorflow` (GPU) if CUDA is available.\n",
     "\n",
-    "### 8) Summary conclusion (example template)\n",
-    "- The CNN achieved a test accuracy of **(replace with actual)** and a test loss of **(replace with actual)**. The model performs well on classes A, B, C (high precision/recall) but struggles with classes X and Y, likely due to visual similarity and limited per-class variability. By applying data augmentation and/or a stronger backbone, performance can be improved.\n",
+    "### Short conclusion (example)\n",
+    "- The CNN baseline demonstrates that a small, 3-block ConvNet can learn meaningful features from CIFAR-10 and achieve reasonable performance after full training and augmentation. With the improvements above (augmentation + batch norm + tuning) the model should reach a test accuracy suitable for coursework expectations (typical baseline CIFAR-10 models reach 70–90% depending on architecture and augmentation).\n",
     "\n",
+    "Replace the placeholder numbers above with the exact outputs from a full run to complete the analysis section for submission."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6894a1b1",
+   "metadata": {},
+   "source": [
+    "## What I used AI for\n",
     "\n",
-    "Feel free to run the notebook and paste the actual numeric results here; I can then update this section to include concrete analysis (exact numbers, percent changes, and targeted recommendations).\n"
+    "This project uses Artificial Intelligence (a Convolutional Neural Network) to perform image classification. Specifically:\n",
+    "\n",
+    "- Task: Supervised image classification on the CIFAR-10 dataset. The CNN learns to map raw image pixels (32×32 RGB) to one of 10 semantic classes (airplane, automobile, bird, cat, deer, dog, frog, horse, ship, truck).\n",
+    "- Data-driven learning: The model uses labeled training images to learn hierarchical visual features (edges → textures → object parts) through convolutional filters and pooling operations.\n",
+    "- Automation: Instead of hand-crafting rules, the CNN automatically extracts features and builds a classifier from examples.\n",
+    "- Experimentation supported by AI: Hyperparameter tuning (filter sizes, number of filters, learning rate, batch size, number of epochs), regularization (dropout, weight decay), and data augmentation are all part of the AI-driven workflow used to improve generalization.\n",
+    "\n",
+    "Which steps relied on AI/ML vs manual code:\n",
+    "- AI/ML: model architecture (Conv2D layers, activations), training (gradient descent via Adam optimizer), prediction/inference, evaluation metrics (accuracy, confusion matrix) and data augmentation if used.\n",
+    "- Manual code: data loading/preprocessing, plotting results, building the Streamlit demo, and organizing the notebook/report.\n",
+    "\n",
+    "Ethical/Limitations note\n",
+    "- The CNN learns correlations in the data and may encode biases present in the dataset. Results should be interpreted with caution if applied to data from different distributions (e.g., higher-resolution photos, different lighting or perspectives).\""
    ]
   },
   {
@@ -546,6 +561,12 @@
     "- Keras Documentation: https://keras.io\n",
     "- Goodfellow et al., Deep Learning (2016)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb669342",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
